Fixed the sidebar and table layout issue using floats

--- a/IMS_Project/wwwroot/css/site.css
+++ b/IMS_Project/wwwroot/css/site.css
@@ -1,6 +1,5 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    margin-top:50px;
 }
 
 .margin-left-remove{
@@ -42,10 +41,20 @@
     }
 }
 
+body{
+    width:100%;
+    overflow-x:hidden;
+}
+
 .navbar-custom {
     background-color: #C10000 !important;
     font-size:18px;
     border-bottom:none !important;
+    position:absolute;
+    width:100%;
+    top:0;
+    border:0;
+    border-radius:0;
 }
 
 .navbar-text-white{
@@ -56,27 +65,31 @@
     background-color:#303030;
     width:100%;
     height:35px;
-
+    
 }
 
 #ims_sidebar {
     background-color: #eaeaea;
-    width: 20%;
-    height: 100%;
-    position: fixed;
-    top: 85px;
+    width: 250px;
+    height: 90.8vh;
+    display:block;
     overflow-x: hidden;
     z-index: 1;
     padding: 0 15px;
+    float:left;
 }
 
-#companyName{
-    color:white;
-    width:100%;
-    height:35px;
-    text-align:center;
-    line-height:35px;
-    font-size:16px;
+#ims_sidebar-wrapper{
+    height:100%;
+}
+
+#companyName {
+    color: white;
+    width: 100%;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    font-size: 16px;
 }
 
 
@@ -106,7 +119,7 @@
     margin-left:25px;
 }
 #spacer {
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 .companyContainer {
     margin-top: 12px;
@@ -117,7 +130,10 @@
     margin-left:10%;
 }
 .companyHeader{
-    margin-left:2.5%;
+    width:210px;
+    margin-left:10px;
+    border-bottom:1px solid black;
+
 }
 .item{
     display:block;
@@ -132,15 +148,6 @@
 
 }
 
-#companyTable {
-    width: 80%;
-    position: absolute;
-    top: 45px;
-    left:11.25%;
-}
+/*Main company assignment table*/
 
-#companyTable td{
-    height:60px;
-    width: 80px;
-    border:1px solid black;
-}
+
